--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -1,5 +1,6 @@
 // Font families
-$font-family-primary: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+$font-family-primary:
+  -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
   'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 $font-family-secondary: 'Georgia', 'Times New Roman', serif;
 $font-family-mono: 'Fira Code', 'Courier New', monospace;
